test/parser/good/nested_if.ks
int main()
{
    int a = 0;
    if ( a < 10 )
    {
        if ( a == 0 )
        {
            return 1;
        }
    }
    else
    {
        int b = 10;
    }
    return 0;
}
