test/parser/bad/missing_type.ks
main( void a )
{
    return 0;
}
